[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/dynamic/enemies/rat.png" type="Texture" id=1]
[ext_resource path="res://dynamic/enemies/Rat.gd" type="Script" id=2]


[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 15.2384, 45.5947 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 8.07779, 8.17243 )

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 9.2873, 8.82577 )

[node name="Rat" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Body" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( 4.50693, 12.8466 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="DangerDetectorFront" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerDetectorFront"]
position = Vector2( -49.2373, 19.6497 )
shape = SubResource( 2 )

[node name="DangerDetectorBack" type="Area2D" parent="."]
position = Vector2( 43.9677, 16.0244 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerDetectorBack"]
position = Vector2( 15.3464, 2.91352 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Body" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="DangerDetectorFront" to="." method="_on_DangerDetectorFront_body_entered"]
[connection signal="body_entered" from="DangerDetectorBack" to="." method="_on_DangerDetectorBack_body_entered"]
